--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,7 @@
     "react-router": "^6.0.0-alpha.2",
     "react-router-dom": "^6.0.0-alpha.2",
     "react-scripts": "^3.4.0",
+    "sweetalert2": "^10.15.5",
     "uuid": "^8.3.0",
     "yup": "^0.29.3"
   },
