--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,8 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mongodb": "^3.6.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "nodemailer": "^6.5.0",
+    "pdfkit": "^0.11.0"
   }
 }
