--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
     "react-perfect-scrollbar": "^1.5.8",
     "react-router": "^6.0.0-alpha.2",
     "react-router-dom": "^6.0.0-alpha.2",
+    "react-schedule-selector": "^3.0.0",
     "react-scripts": "^3.4.0",
     "uuid": "^8.3.0",
     "yup": "^0.29.3"
