--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,6 +51,8 @@
     "react-router-dom": "^6.0.0-alpha.2",
     "react-schedule-selector": "^3.0.0",
     "react-scripts": "^3.4.0",
+    "react-select": "^4.1.0",
+    "styled-components": "^5.2.1",
     "sweetalert2": "^10.15.5",
     "uuid": "^8.3.0",
     "yup": "^0.29.3"
